--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,13 @@ author = "John Reese"
 author-email = "john@noswap.com"
 description-file = "README.rst"
 home-page = "https://attribution.omnilib.dev"
-requires = ["attrs", "click", "jinja2", "packaging", "tomlkit"]
+requires = [
+    "attrs>=19.2.0",
+    "click>=5.0.0",
+    "jinja2>=2.6",
+    "packaging>=14.0",
+    "tomlkit>=0.2.0",
+]
 requires-python = ">=3.6"
 classifiers = [
     "Development Status :: 4 - Beta",
